tests/snapshots/integration__integration_tests__switch__switch_execute_creates_file.snap
---
source: tests/integration_tests/switch.rs
info:
  program: wt
  args:
    - switch
    - "--create"
    - file-test
    - "--execute"
    - "echo 'test content' > test.txt"
  env:
    CLICOLOR_FORCE: "1"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: /dev/null
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_EDITOR: ""
    LANG: C
    LC_ALL: C
    SOURCE_DATE_EPOCH: "1704067200"
---
success: true
exit_code: 0
----- stdout -----
Created new branch and worktree for 'file-test' at [REPO].file-test
Note: Use 'wt switch' (with shell integration) for automatic cd

----- stderr -----
