tests/snapshots/integration__integration_tests__switch__switch_internal_execute_exit_code.snap
---
source: tests/integration_tests/switch.rs
info:
  program: wt
  args:
    - "--internal"
    - switch
    - "--create"
    - exit-code-test
    - "--execute"
    - exit 42
  env:
    CLICOLOR_FORCE: "1"
    COLUMNS: "150"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: "[TEST_GIT_CONFIG]"
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_EDITOR: ""
    HOME: "[TEST_HOME]"
    LANG: C
    LC_ALL: C
    SOURCE_DATE_EPOCH: "1735776000"
    WORKTRUNK_CONFIG_PATH: "[TEST_CONFIG]"
---
success: true
exit_code: 0
----- stdout -----
cd '[REPO].exit-code-test'
exit 42

----- stderr -----
✅ [32m[32mCreated new worktree for [1mexit-code-test[22m from [1mmain[22m at [1m[REPO].exit-code-test[39m[22m[39m
🔄 [36m[36mExecuting (--execute):[39m[39m
[107m [0m  [2m[0m[2m[34mexit[0m[2m 42[0m
